--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "de.robv.android.xposed.mods.appsettings"
+        applicationId "ru.bluecat.android.xposed.mods.appsettings"
         minSdkVersion 15
         targetSdkVersion 29
-        versionName "1.19.1"
-        versionCode 45
-        archivesBaseName = "App Settings v${versionName}"
+        versionName "1.0"
+        versionCode 1
+        archivesBaseName = "App Settings Reborn v${versionName}"
     }
 
     compileOptions {
