--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "ru.bluecat.android.xposed.mods.appsettings"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
-        versionName "1.2"
-        versionCode 4
+        versionName "1.3"
+        versionCode 7
         archivesBaseName = "App Settings Reborn v${versionName}"
     }
 
@@ -41,7 +41,10 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core:1.3.2'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'com.google.android.material:material:1.3.0'
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
-    implementation 'androidx.core:core:1.3.2'
 }
