--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="ru.bluecat.android.xposed.mods.appsettings">
 
     <permission-tree android:name="ru.bluecat.android.xposed.mods.appsettings" />
@@ -14,13 +13,11 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
-        android:requestLegacyExternalStorage="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:allowBackup="false"
-        tools:targetApi="q">
+        android:allowBackup="false">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:configChanges="orientation|screenSize"
             android:theme="@style/Theme.Main">
             <intent-filter>
@@ -30,16 +27,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".settings.ApplicationSettings"
+            android:name=".ui.ApplicationsActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/settings_title"
             android:theme="@style/Theme.Main"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name=".BackupActivity"
+            android:name=".ui.BackupActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:theme="@style/Theme.AppCompat.Translucent"
             android:windowSoftInputMode="stateHidden" >
         </activity>
 
