--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
     <uses-permission android:name="android.permission.GET_TASKS" />
 
     <application
+        android:theme="@style/Theme.Main.Dark"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:allowBackup="false">
         <activity
             android:name=".ui.MainActivity"
-            android:configChanges="orientation|screenSize"
-            android:theme="@style/Theme.Main">
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,7 +29,6 @@
         <activity
             android:name=".ui.ApplicationsActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/Theme.Main"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
