--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "ru.bluecat.android.xposed.mods.appsettings"
         minSdkVersion 21
-        targetSdkVersion 29
-        versionName "1.4.1"
-        versionCode 12
+        targetSdkVersion 30
+        versionName "1.5"
+        versionCode 17
         archivesBaseName = "App Settings Reborn v${versionName}"
     }
 
@@ -45,7 +45,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation "com.github.topjohnwu.libsu:core:3.1.1"
+    implementation "com.github.topjohnwu.libsu:core:3.1.2"
+    implementation "io.reactivex.rxjava3:rxjava:3.0.12"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
 }
