--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </activity>
         <activity
             android:name=".ui.ApplicationsActivity"
+            android:label="@string/settings_title"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden" >
         </activity>
