--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,28 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    namespace 'ru.bluecat.android.xposed.mods.appsettings'
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "ru.bluecat.android.xposed.mods.appsettings"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionName "1.5.1"
-        versionCode 20
+        minSdkVersion 27
+        targetSdkVersion 32
+        versionName "1.6"
+        versionCode 26
         archivesBaseName = "App Settings Reborn v${versionName}"
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    lintOptions {
-        disable 'MissingTranslation'
+        sourceCompatibility JavaVersion.VERSION_1_10
+        targetCompatibility JavaVersion.VERSION_1_10
     }
 
     buildTypes {
         debug {
             minifyEnabled false
+            shrinkResources false
             debuggable true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
@@ -38,16 +34,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lint {
+        disable 'MissingTranslation'
+    }
 }
 
 dependencies {
-    implementation 'androidx.core:core:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation "com.github.topjohnwu.libsu:core:3.1.2"
-    implementation "io.reactivex.rxjava3:rxjava:3.0.12"
+    //noinspection GradleDependency
+    implementation 'com.mikepenz:materialdrawer:6.1.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+
+    implementation "io.reactivex.rxjava3:rxjava:3.1.4"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
     compileOnly 'de.robv.android.xposed:api:82'
     compileOnly 'de.robv.android.xposed:api:82:sources'
 }
