--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="ru.bluecat.android.xposed.mods.appsettings">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <permission-tree android:name="ru.bluecat.android.xposed.mods.appsettings" />
 
@@ -12,16 +11,20 @@
 
     <uses-permission android:name="ru.bluecat.android.xposed.mods.appsettings.BROADCAST_PERMISSION" />
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" tools:ignore="QueryAllPackagesPermission" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
 
     <application
-        android:theme="@style/Theme.Main.Dark"
+        android:theme="@style/Theme.Main"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:allowBackup="false">
+        android:allowBackup="false"
+        android:supportsRtl="false"
+        tools:ignore="DataExtractionRules">
         <activity
-            android:name=".ui.MainActivity"
-            android:configChanges="orientation|screenSize">
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,13 +32,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.ApplicationsActivity"
+            android:name=".AppSettingsActivity"
             android:label="@string/settings_title"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name=".ui.BackupActivity"
+            android:name=".BackupActivity"
             android:configChanges="orientation|screenSize"
             android:theme="@style/Theme.AppCompat.Translucent"
             android:windowSoftInputMode="stateHidden" >
@@ -45,11 +48,8 @@
             android:name="xposedmodule"
             android:value="true" />
         <meta-data
-            android:name="xposedsharedprefs"
-            android:value="true" />
-        <meta-data
             android:name="xposedminversion"
-            android:value="89" />
+            android:value="93" />
         <meta-data
             android:name="xposeddescription"
             android:value="@string/app_module_summary" />
