--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-
     repositories {
         google()
-		jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
-    }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url "https://jcenter.bintray.com"}
         maven { url 'https://jitpack.io' }
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.3'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
